# cppprojecttemplate

./: .README.swp  .build_properties.mk.swp  Makefile.in  README  acinclude.m4  build_properties.mk  config_properties.m4  configure  configure.ac
autom4te.cache/: output.0  traces.0
config/: projectname_logging.conf
include/: config_options.h
tests/: main_test.cpp
tests/src/: testname_test.cpp
